fix spacing between links in footer
fixes CNVS-5477

test plan:
- space between links in footer should be consistent

Reviewed-on: https://gerrit.instructure.com/19997
Tested-by: Jenkins <jenkins@instructure.com>
Product-Review: Simon Williams <simon@instructure.com>
QA-Review: Simon Williams <simon@instructure.com>

--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -186,8 +186,8 @@ body
   a
     border-left: 1px solid #5C5C5C
     color: #5C5C5C
-    margin-right: 0.4em
-    padding-left: 0.4em
+    padding-right: 2px
+    padding-left: 5px
     &:hover, &:focus
       text-decoration: underline
     // ie7 supports :first-child so this will work on everything we support.
